# cchess

./: .gitignore  .pylintrc  AGENTS.md  CHANGELOG.md  CODE_QUALITY_REPORT.md  CODE_REVIEW.md  CODE_SMELL_REPORT.md  DEVELOPMENT_GUIDE.md  OPTIMIZATION_EXECUTION_LIST.md  OPTIMIZATION_NOTES.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_QUICK_REFERENCE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  README.rst  RESCAN_REPORT.md  ReleaseNote.txt  add_docstrings.py  add_docstrings_v2.py  board_t.py  fix_circular_import.py  fix_indent.py  output.xqf  pyproject.toml  pyproject.toml.bak  pytest.ini  restore_backups.py  ruff_output.txt  run_test.bat  setup.cfg  setup.py  test_board.py  类依赖关系图.md
.github/workflows/: pylint.yml
.qwen/: settings.json  settings.json.orig
cchess/: __init__.py  board.py  book.py  chessman.py  common.py  engine.py  exception.py  game.py  hash.py  loader_cbf.py  loader_pgn.py  loader_plain.py  loader_txt.py  loader_xqf.py  move.py  piece.py  player.py  read_cbf.py  read_txt.py  read_xqf.py  reader_cbf.py  reader_dhtml.py  reader_pgn.py  reader_txt.py  reader_xqf.py  table.py  ucci.py  utils.py
cchess/config/: Chinese Chess One Hot.json
cchess_manuals/bad_manuals/: bad_035正马三兵对肋车边马 红进七兵(一).XQF
data/: 1989年龙化杯象棋名师邀请赛35局.CBL  NoMove.xqf  game_test.xqf  test1_move.txt  test_5_variations.xqf  test_convert_out.xqf  ucci_test1_move.txt  uci_test_move.txt
demo/: demo_base.py  download_meng_ru_shen_ji.py  end_game_master.py  马兵类杀法.csv  马兵类杀法.txt
demo/end_game/: end_game.py  梦入神机.eglib  梦入神机.eplib  适情雅趣550.eplib  非连杀小局.eglib
doc/: move_notation.md  ~$棋桥文件格式.docx  中国象棋四字记谱法.md  中国象棋完整规范说明.md  中国象棋竞赛规则_1999年版.md  中国象棋通用引擎协议(UCCI).md  象棋桥文件格式.docx  象棋棋谱文件格式.md
end_game/: end_game.py  end_game_lib_maker.py  中局攻杀谱.csv  古典排局.csv  少子百局谱.eglib  弈海烟波.eglib  梦入神机.eglib  残局攻杀谱.csv  泥马渡康王.eglib  烂柯神机.eglib  现代排局.csv  适情雅趣550.eglib  适情雅趣550.eplib
end_game/scripts/: moves_txt_to_csv.py  xqf_folder_bad_files.py  xqf_folder_to_csv.py  xqf_folder_to_txt.py
end_game/中局攻杀谱/: 01三次献车 攻杀紧凑.XQF  02升车解围 暗伏玄机.XQF  03迂回运子 弃车入局.XQF  04出奇制胜 妙着连珠.XQF  05巧避邀兑 象眼献车.XQF  06掌握主动 弃车搏杀.XQF  07虏马献车 神机妙算.XQF  08突破防线 铁马奔驰.XQF  09平炮献车 攻杀玄妙.XQF  10落相解危 冲兵奇袭.XQF  11追捉孤炮 弃车腾挪.XQF  12纵马卧槽 妙献双车.XQF  13化解攻势 舍车剁马.XQF  14老兵逼宫 花心献车.XQF  56局-实战杀局欣赏.xqf  57局-实战杀局欣赏.xqf  58局-实战杀局欣赏.xqf  59局-实战杀局欣赏.xqf  60局-实战杀局欣赏.xqf  61局-实战杀局欣赏.xqf  62局-实战杀局欣赏.xqf  63局-实战杀局欣赏.xqf  64局-实战杀局欣赏.xqf  65局-实战杀局欣赏.xqf  66局-实战杀局欣赏.xqf  67局-实战杀局欣赏.xqf  68局-实战杀局欣赏.xqf  69局-实战杀局欣赏.xqf  70局-实战杀局欣赏.xqf  71局-实战杀局欣赏.xqf  72局-实战杀局欣赏.xqf  73局-实战杀局欣赏.xqf  74局-实战杀局欣赏.xqf  75局-实战杀局欣赏.xqf  76局-实战杀局欣赏.xqf  77局-实战杀局欣赏.xqf  78局-实战杀局欣赏.xqf  79局-实战杀局欣赏.xqf  80局-实战杀局欣赏.xqf  81局-实战杀局欣赏.xqf  (+455 more)
end_game/古典排局/: 三国七子谱_吕温候濮阳破曹兵.XQF  三国七子谱_孙伯符大战严白虎.XQF  三国七子谱_屯土山关公约三事.XQF  三国七子谱_弥正平裸衣骂曹.XQF  三山舞象集_作伟后生.XQF  三山舞象集_孝行之道.XQF  三山舞象集_弈秋面目.XQF  三山舞象集_悌敬友恭.XQF  三山舞象集_林泉风趣.XQF  少子百局谱_三仙成丹.XQF  少子百局谱_三马同槽.XQF  少子百局谱_低象拦车.XQF  少子百局谱_停车问路.XQF  少子百局谱_前卒封江.XQF  少子百局谱_千里行军.XQF  少子百局谱_多卒相拘.XQF  少子百局谱_大海捞针.XQF  少子百局谱_少子落雁.XQF  少子百局谱_左卒封江.XQF  少子百局谱_底象赛马.XQF  少子百局谱_弯弓射雕2.XQF  少子百局谱_星光灿烂.XQF  少子百局谱_春水东流.XQF  少子百局谱_春江垂钓.XQF  少子百局谱_春草闯堂.XQF  少子百局谱_深潭驱鳄.XQF  少子百局谱_烽火连天.XQF  少子百局谱_移步换影.XQF  少子百局谱_红旗挂角.XQF  少子百局谱_草原赛马.XQF  少子百局谱_轻车熟道.XQF  少子百局谱_远卒双星.XQF  少子百局谱_逆水行舟.XQF  少子百局谱_高卒舞狮.XQF  (+83 more)
examples/: A.txt  B.txt  C.txt  K.txt  N.txt  P.txt  R.txt  download_meng_ru_shen_ji.py  endgames.epd  level0.epd  level0.epg  level1.epd  libxqf_dump.py  make_epd.py  piece_stat.py  reader_dhtml.py  test_engine.py  ui_game.py  xqf_dump.py  xqf_merge.py  xqf_test.py  梦入神机.epd  梦入神机.epg  适情雅趣360.epd  适情雅趣360.epp  适情雅趣550.epd
game_book/: empty.py
test/: test_board_move.py  test_read_xqf.py  test_reader_txt.py  test_ucci.py
tests/: .pylintrc  benchmark.py  check_regression.py  side_test.py.bak  test.cbr  test2.cbr  test_board_extended.py  test_board_make_unmake.py  test_board_move.py  test_common.py  test_coverage.py  test_engine.py  test_engine.py.bak  test_engine_async.py  test_engine_extended.py  test_game.py  test_game.py.bak  test_game_extended.py  test_io_pgn_txt.py  test_main.py  test_move_extended.py  test_move_pawn_multiline.py  test_piece.py  test_read_cbf.py  test_read_cbr.py  test_read_xqf.py  test_rw_pgn.py  test_ubb.py  test_ucci.py  test_ucci.py.bak
tools/: meng_ru_shen_ji.py  ucci_test.py  xqf_dump.py  xqf_test.py  xqfbook_test.py
(+43468 files in other folders)
