
[tool.poetry]
name = "cchess"
version = "1.26.0"
description = "ChineseChess (AKA XiangQi) library"
authors = ["walker8088 <walker8088@gmail.com>"]
license = "LGPL3"
readme = "README.md"
keywords = ["XiangQi", "Xiang Qi", 'ChineseChess']

[project]
name = "cchess"
classifiers = [
	"Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: LGPL-3.0-or-later",
	"Natural Language :: Chinese",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: POSIX",
	"Operating System :: POSIX :: BSD",
	"Operating System :: POSIX :: Linux",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: Implementation :: CPython",
]

requires-python = ">=3.6"
dependencies = []
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/walker8088/cchess"
Source = "https://github.com/walker8088/cchess"


[tool.poetry.dependencies]
python = "^3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true