
[project]
name = "cchess"
version = "1.26.1"
description = "ChineseChess (AKA XiangQi) library"
readme = "README.md"
authors = [
    { name = "Walker Lee", email = "walker8088@gmail.com" }
]
license = "LGPL-3.0-or-later"
keywords = ["XiangQi", "Xiang Qi", 'ChineseChess']
classifiers = [
	"Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: POSIX",
	"Operating System :: POSIX :: BSD",
	"Operating System :: POSIX :: Linux",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: Implementation :: CPython",
]

requires-python = ">=3.6"
dependencies = [
    "pytest>=7.0.1",
    "pytest-coverage>=0.0",
    "chardet>=5.0",
]

[project.urls]
Homepage = "https://github.com/walker8088/cchess"
Source = "https://github.com/walker8088/cchess"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true  # 启用包含数据文件

# 明确声明要包含的数据文件
[tool.setuptools.package-data]
my_awesome_package = [
    "ReleaseNote.txt",
    # 可以在此添加其他数据文件
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pytest.ini_options]
addopts = "--tb=short"
